--- a/src/App.css
+++ b/src/App.css
@@ -18,87 +18,6 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.image-top {
-  margin-top: 20%;
-  margin-bottom: 2%;
-}
-
-.button {
-  background-color: white;
-  color: black;
-  border: 2px solid #555555;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  cursor: pointer;
-border-radius:20%;
-}
-
-.button:hover {
-  background-color: #555555;
-  color: white;
-}
-.button:hover {
-  background-color: #555555;
-  color: white;
-}
-
-
-/*Bounce*/
-@keyframes kreep {
-  0% {-webkit-transform: scale(1.1,.9);
-      transform: scale(1.1,.9);}
- 50% { -webkit-transform: scale(.9,1.1) translateY(-.5rem)}
- 70% { -webkit-transform: scale(1);
-       transform: scale(1);}
-}
-
-h1.kreep {
-display: inline-block;
-/*name-duration-function(ease,eas-in,linear)-delay-count-direction */
-animation: kreep 0.7s ease 2s infinite alternate;
-margin: 5%;
-}
-
-h1.kreep:hover {
-animation: none;
-}
-
-.list-group {
-  padding-top: 5%;
-  padding-bottom: 5%;
-  text-align: left;
-  font-size: 13px;
-  color: aliceblue;
-}
-
-.ul {
-  padding-top: 20%;
-}
-
-.bold {
-  font-weight: bold;
-  color: red;
-}
-
-.nextView {
-  margin-top: 5%;
+.container {
+  margin-top: 10%;
 }
